    been implemented (see below).
  * Add multiarch implementation from upstream (patch
    multiarch_basic_support.diff, taken from upstream bug #12037). New
    implementation does not need dpkg-dev 1.16, it is entirely backwards
    compatible with previous releases and in addition, it implements multiarch
    support for find_package().

 -- Modestas Vainius <modax@debian.org>  Thu, 09 Jun 2011 00:37:03 +0300

cmake (2.8.4+dfsg.1-3) unstable; urgency=low

  * Merge 2.8.2+dfsg.1-0+squeeze1 changes.
  * Do not start cmake description synopsis with an article.
  * Generate colour Makefiles when $TERM is set to 'screen-256color-bce'.
    Thanks to Davide Mancusi for the patch (screen-256color-bce.diff).
    (Closes: #627853)
  * Add libxmlrpc-core-c3-dev as a preferred alternative to libxmlrpc-c3-dev
    in Build-Depends. libxmlrpc-c3-dev has become a transitional package.
  * Bump Standards-Version to 3.9.2: no changes needed.
  * Switch Vcs-* debian/control fields to anonscm.debian.org.
  * Fix find_library() to find libraries in multiarch library paths (patch
    multiarch_library_directory_hack.diff). While the patch is not a good fix
    (hackish by nature, no cross-compilation support etc.), it should do the
    job in majority of cases. Also require dpkg-dev >= 1.16 at both build
    time (Build-Depends) and runtime (cmake Depends) because the patch needs
    dpkg-architecture -qDEB_HOST_MULTIARCH. (Closes: #618932)
  * Make FindGTK2.cmake work with Debian multiarch
    (patch multiarch_findgtk2_fix.diff). (LP: #751940)

 -- Modestas Vainius <modax@debian.org>  Wed, 08 Jun 2011 00:15:00 +0300

cmake (2.8.4+dfsg.1-2) unstable; urgency=low

  * Add backport_test_order_fix.diff to restore conpatibility with earlier
    versions with respect to the test run order. (Closes: #615054)

 -- Modestas Vainius <modax@debian.org>  Fri, 25 Feb 2011 19:12:33 +0200

cmake (2.8.4+dfsg.1-1) unstable; urgency=low
